Git 1.2.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
	Added: HSTS (HTTP Strict Transport Security) feature
	Fixed: Cleanup paths using File::Spec::canonpath() instead of dedicated regexps
	Fixed: Default phpini data must be lazy loaded (only once per domain module) to save SQL queries
	Rewritten: iMSCP::SetRights library (usage of chown and chmod perl-functions instead of calling external commands)
	Removed: Optional dirname parameter for all iMSCP::Dir::* methods (iMSCP::Dir object = One directory)
	Removed: Support for file/dir exclusion - iMSCP::Dir::rcopy()

FRONTEND
	Added: HSTS (HTTP Strict Transport Security) feature
	Fixed: Possible ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx cache directory
	Fixed: Wrong issue tracker links in admin/database_update.php

TESTS
	Added: Travis CI support for Unit testing
	Added: Unit tests for the iMSCP::Dir library
	Added: Unit tests for the iMSCP::SetRights library

YOUTRACK
	Fixed: #IP-1393 Unable to disable backup feature for existing domains
	Fixed: #IP-1394 httpd-logs-mngr starts before mysql.server started
	Fixed: #IP-1395 Domain redirect feature - Missing URL path separator
	Fixed: #IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
	Fixed: #IP-1399 Add Auto-Submitted Header to Autoreply Emails

------------------------------------------------------------------------------------------------------------------------
1.2.9
------------------------------------------------------------------------------------------------------------------------

2015-07-03: Laurent Declercq
	RELEASE i-MSCP 1.2.9

BACKEND
	Added: Dedicated server implementation for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Changed: Customers have now a full read access to their http logs, including those which were rotated