@@ -317,7 +317,7 @@ sub _getMtaData
 		$self->{'mta'} = {
 			DOMAIN_ADMIN_ID => $self->{'domain_admin_id'},
 			DOMAIN_NAME => $self->{'subdomain_alias_name'} . '.' . $self->{'alias_name'},
-			DOMAIN_TYPE => $self->getType(),
+			DOMAIN_TYPE => 'alssub',
 			TYPE => 'valssub_entry',
 			EXTERNAL_MAIL => $self->{'external_mail'},
 			MAIL_ENABLED => ($self->{'mail_on_domain'} || $self->{'domain_mailacc_limit'} >= 0) ? 1 : 0
