@@ -311,7 +311,7 @@ sub _getMtaData
 		$self->{'mta'} = {
 			DOMAIN_ADMIN_ID => $self->{'domain_admin_id'},
 			DOMAIN_NAME => $self->{'subdomain_name'} . '.' . $self->{'user_home'},
-			DOMAIN_TYPE => $self->getType(),
+			DOMAIN_TYPE => 'sub',
 			TYPE => 'vsub_entry',
 			EXTERNAL_MAIL => $self->{'external_mail'},
 			MAIL_ENABLED => ($self->{'mail_on_domain'} || $self->{'domain_mailacc_limit'} >= 0) ? 1 : 0
