@@ -8,6 +8,8 @@ BACKEND
 	Added: HSTS (HTTP Strict Transport Security) feature
 	Fixed: Cleanup paths using File::Spec::canonpath() instead of dedicated regexps
 	Fixed: Default phpini data must be lazy loaded (only once per domain module) to save SQL queries
+	Fixed: Domain aliases are not processed correctly in Servers::mta::postfix::addDmn()
+	Fixed Wrong domain type set in module data providers
 	Rewritten: iMSCP::SetRights library (usage of chown and chmod perl-functions instead of calling external commands)
 	Removed: Optional dirname parameter for all iMSCP::Dir::* methods (iMSCP::Dir object = One directory)
 	Removed: Support for file/dir exclusion - iMSCP::Dir::rcopy()
